--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
-APP_NAME=Laravel
+APP_NAME="Mirvan Inc"
 APP_ENV=local
-APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -20,12 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=laravel
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -63,3 +62,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+STRIPE_KEY=pk_test_....
+STRIPE_SECRET=sk_test_5...
+STRIPE_WEBHOOK_SECRET=whsec...
